<package>
  <name>led_notify_msgs</name>
  <version>0.1.0</version>
  <description>
    This package provides message and service formats for LED light notifications
  </description>

  <maintainer email="mppritchard3@hotmail.com">mik-p</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>

</package>
